# micro_core

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: build.md
doc/io/communication/: api.md  communication.md  test.md
doc/io/message/: api.md  message.md  test.md
include/: mc_version.h
include/alg/: algorithm.h  mc_buffer.h  span.h
include/core/: error.h  time.h
include/dsa/: sarray.h  span.h
include/dsa/memory/: memlin.h  mempool.h
include/io/: io.h
include/io/communication/: communication.h  window.h  window_pool.h
include/io/message/: mc_message.h  message.h  window.h  window_pool.h
include/pattern/: mc_chain.h
src/: CMakeLists.txt
src/alg/: CMakeLists.txt  algorithm.c  span.c
src/core/: CMakeLists.txt
src/core/time/: CMakeLists.txt  time_linux.c
src/dsa/: CMakeLists.txt  sarray.c  span.c
src/dsa/memory/: memlin.c  mempool.c
src/io/: CMakeLists.txt
src/io/communication/: CMakeLists.txt  communication.c  mc_base.h  mc_communication.c  mc_frame.c  mc_frame.h  mc_io.c  mc_io.h  mc_protocol.c  mc_protocol.h  mc_transceiver.c  mc_transceiver.h  mc_window.h  mc_window_pool.c  mc_window_pool.h  window.c  window_pool.c
src/io/message/: CMakeLists.txt  mc_message.c  message.c  window.c  window_pool.c
src/pattern/: CMakeLists.txt  mc_chain.c
test/: CMakeLists.txt  test_dsa_memlin.c  test_dsa_mempool.c  test_dsa_span.c
test/alg/: CMakeLists.txt  test_alg.c
test/dsa/: CMakeLists.txt  test_sorted_array.c
test/io/: CMakeLists.txt
test/io/communication/: CMakeLists.txt
test/io/communication/udp/: test.c  test_common.c  test_common.h  test_communication_udp.c  test_communication_udp_common.c  test_communication_udp_common.h  test_communication_udp_receiver.c  test_communication_udp_sender.c  test_receiver.c  test_sender.c
test/io/message/: CMakeLists.txt  test_message_udp.c
test/io/message/udp/: test_common.c  test_common.h  test_message.c  test_message_udp.c  test_message_udp_common.c  test_message_udp_common.h  test_message_udp_receiver.c  test_message_udp_receiver.h  test_message_udp_sender.c  test_message_udp_sender.h  test_receiver.c  test_receiver.h  test_sender.c  test_sender.h
